--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="3dp"
 
-                    android:background="#ffffff"
+                    android:background="@drawable/border"
                     android:baselineAligned="true"
                     android:orientation="horizontal">
 
@@ -61,10 +61,9 @@
                         android:layout_width="260dp"
                         android:layout_height="48dp"
                         android:backgroundTint="#ffffff"
-                        android:textSize="14sp"
-                        android:padding="5dp"
                         android:inputType="textEmailAddress"
-                        />
+                        android:padding="5dp"
+                        android:textSize="14sp" />
 
                     <TextView
                         android:id="@+id/textViewID"
@@ -113,7 +112,7 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="3dp"
 
-                    android:background="#ffffff"
+                    android:background="@drawable/border"
                     android:baselineAligned="true"
                     android:orientation="horizontal">
 
@@ -122,9 +121,9 @@
                         android:layout_width="310dp"
                         android:layout_height="48dp"
                         android:backgroundTint="#ffffff"
-                        android:textSize="14sp"
+                        android:inputType="textPassword"
                         android:padding="5dp"
-                        android:inputType="textPassword"/>
+                        android:textSize="14sp" />
 
                     <ImageView
                         android:id="@+id/textViewPW"
@@ -174,7 +173,7 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="3dp"
 
-                    android:background="#ffffff"
+                    android:background="@drawable/border"
                     android:baselineAligned="true"
                     android:orientation="horizontal">
 
@@ -183,9 +182,9 @@
                         android:layout_width="310dp"
                         android:layout_height="48dp"
                         android:backgroundTint="#ffffff"
-                        android:textSize="14sp"
+                        android:inputType="textPassword"
                         android:padding="5dp"
-                        android:inputType="textPassword" />
+                        android:textSize="14sp" />
 
                     <ImageView
                         android:id="@+id/textViewPWC"
@@ -236,7 +235,7 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="3dp"
 
-                    android:background="#ffffff"
+                    android:background="@drawable/border"
                     android:baselineAligned="true"
                     android:orientation="horizontal">
 
@@ -245,9 +244,9 @@
                         android:layout_width="360dp"
                         android:layout_height="48dp"
                         android:backgroundTint="#ffffff"
-                        android:textSize="14sp"
+                        android:inputType="textPersonName"
                         android:padding="5dp"
-                        android:inputType="textPersonName"/>
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -301,12 +300,11 @@
                             android:layout_height="48dp"
                             android:layout_marginEnd="8dp"
                             android:layout_weight="1"
-                            android:background="#ffffff"
-                            android:backgroundTint="#ffffff"
+                            android:background="@drawable/border"
                             android:hint="년(4자)"
+                            android:maxLength="4"
                             android:padding="5dp"
-                            android:textSize="14sp"
-                            android:maxLength="4" />
+                            android:textSize="14sp" />
 
                         <Spinner
                             android:id="@+id/spinnerMonth"
@@ -324,11 +322,11 @@
                             android:layout_height="48dp"
                             android:layout_marginStart="8dp"
                             android:layout_weight="1"
-                            android:background="#ffffff"
+                            android:background="@drawable/border"
                             android:hint="일"
+                            android:maxLength="2"
                             android:padding="5dp"
-                            android:textSize="14sp"
-                            android:maxLength="2"/>
+                            android:textSize="14sp" />
                     </TableRow>
 
 
@@ -394,7 +392,7 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="3dp"
 
-                    android:background="#ffffff"
+                    android:background="@drawable/border"
                     android:baselineAligned="true"
                     android:orientation="horizontal">
 
@@ -403,9 +401,9 @@
                         android:layout_width="360dp"
                         android:layout_height="48dp"
                         android:backgroundTint="#ffffff"
-                        android:textSize="14sp"
+                        android:hint="선택입력"
                         android:padding="5dp"
-                        android:hint="선택입력"/>
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -446,7 +444,7 @@
                     android:layout_marginEnd="15dp"
                     android:layout_marginBottom="3dp"
 
-                    android:background="#ffffff"
+                    android:background="@drawable/border"
                     android:baselineAligned="true"
                     android:orientation="horizontal">
 
@@ -455,10 +453,10 @@
                         android:layout_width="360dp"
                         android:layout_height="48dp"
                         android:backgroundTint="#ffffff"
-                        android:textSize="14sp"
-                        android:padding="5dp"
                         android:hint="전화번호 입력"
-                        android:inputType="number"/>
+                        android:inputType="number"
+                        android:padding="5dp"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -480,6 +478,7 @@
     </ScrollView>
 
     <android.widget.Button
+        android:id="@+id/signup"
         android:text="가입하기"
         android:background="#00aa55"
         android:layout_marginStart="15dp"
