--- a/app/src/main/res/drawable/spinner_border.xml
+++ b/app/src/main/res/drawable/spinner_border.xml
@@ -3,6 +3,5 @@
     <solid android:color="#FFFFFF"/>
     <stroke
         android:width="1dp"
-        android:color="#DADADA"/>
-    <corners android:radius="4dp"/>
+        android:color="#ECECED"/>
 </shape>
