--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,6 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/bgNaver">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="start"
+        android:baselineAligned="true"
+        android:layout_marginTop="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/logoimage"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logon"
+            android:layout_marginStart="15dp"
+            android:layout_marginEnd="10dp"
+            android:padding="5dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:text="네이버ID"
+            android:textSize="25sp"
+            android:layout_marginTop="5dp"/>
+
+    </LinearLayout>
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/userprofile"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:elevation="80dp"/>
+
+    <TextView
+        android:id="@+id/usernameProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:textStyle="bold"
+        android:text="임제영"
+        android:textSize="20sp"
+        />
+
+    <TextView
+        android:id="@+id/emailUpside"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="qwerrr504@naver.com"
+        android:layout_gravity="center"
+        android:textColor="#ABABAB"/>
+
+    <LinearLayout
+        android:id="@+id/buttonBox"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp">
+
+        <android.widget.Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="내프로필"
+            android:gravity="start|center_vertical"
+            android:paddingStart="15dp"
+            android:textColor="#ffffff"
+            android:background="@drawable/button_top"/>
+
+        <android.widget.Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="01041010605"
+            android:gravity="start|center_vertical"
+            android:paddingStart="15dp"
+            android:background="@drawable/button_middle"/>
+
+        <android.widget.Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="qwerrr504@gmail.com"
+            android:gravity="start|center_vertical"
+            android:paddingStart="15dp"
+            android:background="@drawable/button_bottom"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/buttonBox2"
+        android:layout_width="320dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp">
+
+        <android.widget.Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="보안설정"
+            android:gravity="start|center_vertical"
+            android:paddingStart="15dp"
+            android:textColor="#ffffff"
+            android:background="@drawable/button_top"/>
+
+        <android.widget.Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="비밀번호"
+            android:gravity="start|center_vertical"
+            android:paddingStart="15dp"
+            android:background="@drawable/button_middle"/>
+
+        <android.widget.Button
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="비밀번호"
+            android:gravity="start|center_vertical"
+            android:paddingStart="15dp"
+            android:background="@drawable/button_bottom"/>
+    </LinearLayout>
+
+
+
+</LinearLayout>
